<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.details.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frameLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_background_movie"
                android:layout_width="wrap_content"
                android:layout_height="375dp"
                android:alpha="0.2"
                android:scaleType="centerCrop"
                android:src="@drawable/background_movie"
                app:shapeAppearanceOverlay="@style/img_shape_movie" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btn_arrow_left"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_arrow_left"
                app:shapeAppearanceOverlay="@style/ic_shape_left" />

            <include
                android:id="@+id/item_movie"
                layout="@layout/item_movie"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_gravity="end"
                android:layout_marginTop="152dp"
                android:layout_marginEnd="20dp" />

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="160dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_movie"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/tv_message_duration_movie"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/tv_message_duration_movie"
                    android:textAlignment="textStart"
                    android:textColor="@color/light_violet"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_message_type_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_message_type_movie"
                    android:textAlignment="textStart"
                    android:textColor="@color/light_violet"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/ic_star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_message_average_of_votes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/tv_message_average_of_votes"
                        android:textAlignment="textStart"
                        android:textColor="@color/dark_gray"
                        android:textSize="13sp" />
                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/tv_title_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_textview_overview"
            android:textColor="@color/light_violet"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout1" />

        <TextView
            android:id="@+id/tv_message_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="10sp"
            android:text="@string/tv_message_overview"
            android:textAlignment="textStart"
            android:textColor="@color/light_violet"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_overview" />

        <TextView
            android:id="@+id/tv_title_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_textview_reviews"
            android:textColor="@color/light_violet"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_message_overview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_reviews" />

        <TextView
            android:id="@+id/tv_title_similar_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_textview_similar_movies"
            android:textColor="@color/light_violet"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rc_reviews" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_similar_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_similar_movies"
            tools:listitem="@layout/item_movie" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>